<resources>
    <string name="start_fragment_button_sign_in">Sign in</string>
    <string name="start_fragment_button_sign_up">Sign up</string>
    <string name="start_fragment_privacy_policy">Privacy policy</string>
    <string name="start_fragment_label_language">Language</string>
    <string name="application_language_english">English</string>
    <string name="application_language_russian">Chines</string>
    <string name="register_fragment_btn_show_advanced_data">Show advanced data</string>
    <string name="register_fragment_btn_hide_advanced_data">Hide advanced data</string>
    <string name="register_fragment_button_sign_up">Sign up</string>
    <string name="register_fragment_label_phone_number">Phone number</string>
    <string name="register_fragment_label_password">Password</string>
    <string name="register_fragment_label_full_name">Full Name</string>
    <string name="register_fragment_label_email">Email</string>
    <string name="register_fragment_label_about_yourself">About yourself</string>
    <string name="register_fragment_label_have_an_account">Have an account?</string>
    <string name="register_fragment_btn_sign_in">Sign in</string>
    <string name="register_fragment_hint_enter_password">Enter Your Password</string>
    <string name="register_fragment_hint_enter_full_name">Enter Your Full Name</string>
    <string name="register_fragment_hint_enter_email">Enter Your Email</string>
    <string name="register_fragment_hint_enter_about_yourself">City, Occupation, Hobbies..</string>
    <string name="register_fragment_title_create_new_account">Create New Account</string>
    <string name="login_fragment_title_welcome_back">Welcome back!</string>
    <string name="login_fragment_label_phone_number">Phone number</string>
    <string name="login_fragment_label_password">Password</string>
    <string name="login_fragment_hint_enter_password">Enter your password</string>
    <string name="login_fragment_button_sing_in">Sign in</string>
    <string name="login_fragment_label_new_to_anysa">New to Anysa?</string>
    <string name="login_fragment_label_new_to_anysa_sign_up">Sign up</string>
    <string name="register_form_optional">(optional)</string>
    <string name="error_field_is_empty">Field is empty</string>
    <string name="error_ivalid_email_format">Invalid email format</string>
    <string name="error_name_too_short">Name is too short</string>
    <string name="error_name_too_long">Name is too long</string>
    <string name="error_password_must_be_at_least_characters_long">Password must be at least 8 characters long</string>
    <string name="error_password_must_contain_one_number">Password must contain at least 1 number</string>
    <string name="error_password_must_contain_at_least_1_lower">Password must contain at least 1 lower case letter</string>
    <string name="error_password_must_contain_at_least_1_upper">Password must contain at least 1 upper case letter</string>
    <string name="error_invalid_phone_number">Invalid phone number format</string>
    <string name="error_bio_too_long">Bio is too long</string>
    <string name="error_can_not_connect_to_server">Can not connect to server. Check your internet connection and try again</string>
    <string name="login_fragment_invalid_phone_or_password">Invalid phone or password</string>
    <string name="registration_error_occured">Error occured</string>
    <string name="registration_fragment_error_phone_registered">This phone is already registered</string>
    <string name="fragment_contacts_title">Contacts</string>
    <string name="search_view_hint_search">Search</string>
    <string name="contacts_fragment_search_hint">Search</string>
    <string name="contacts_fragment_view">View</string>
    <string name="fragment_add_new_contact_title">Add New Contact</string>
    <string name="fragment_add_contact_search_hint">Enter Phone Number</string>
    <string name="fragment_add_contact_button_search">Search</string>
    <string name="fragment_add_contact_found_message">Contact has been found. Tap + to add to friends. Tap name or photo to see the profile.</string>
    <string name="fragment_add_contact_not_found_message">Unfortunately, this contact has not been found. Seems like this number does not exist in our system.</string>
    <string name="profile_fragment_edit_photo">Edit Photo</string>
    <string name="fragment_profile_edit_profile">Edit profile</string>
    <string name="fragment_profile_my_applications">My Applications</string>
    <string name="fragment_profile_settings">Settings</string>
    <string name="fragment_profile_logout">Log Out</string>
    <string name="profile_fragment_profile_loading_error">Profile loading error</string>
    <string name="fragment_edit_profile_title">Edit Profile</string>
    <string name="edit_profile_label_full_name">Full name</string>
    <string name="edit_profile_hint_full_name">Your full name</string>
    <string name="edit_profile_hint_email">Add your email</string>
    <string name="edit_profile_label_email">Email</string>
    <string name="edit_profile_label_bio">About yourself</string>
    <string name="edit_profile_hint_bio">City, Occupation, Hobbies..</string>
    <string name="fragment_edit_profile_btn_save">Save</string>
    <string name="fragment_edit_profile_btn_cancel">Cancel</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_profile_password">Password</string>
    <string name="fragment_profile_settings_language">Language</string>
    <string name="fragment_profile_settings_notifications">Notifications</string>
    <string name="fragment_password_title">Password</string>
    <string name="fragment_change_password_hint_enter_current_pass">Enter Password</string>
    <string name="fragment_change_password_hint_new_password">New Password</string>
    <string name="fragment_change_password_hint_new_password_again">Enter New Password Again</string>
    <string name="fragment_change_password_label_your_current_pass">Your Current Password</string>
    <string name="fragment_change_password_label_new_pass">Enter New Password</string>
    <string name="fragment_change_password_label_confirm_new_pass">Confirm New Password</string>
    <string name="fragment_change_password_btn_save">Save</string>
    <string name="fragment_change_password_error_passwords_not_match">Passwords doesn`t match</string>
    <string name="fragment_change_password_error_enter_current">Please enter your current password</string>
    <string name="fragment_change_password_error_new_pass_empty">New password field is empty</string>
    <string name="fragment_chats_search_hint">Search</string>

</resources>
