<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="app.anysa.domain.pojo.User" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <app.anysa.ui.widget.ToolbarView
            android:id="@+id/toolbarView"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tv_action_left_icon="@drawable/ic_arrowback"
            app:tv_action_left_tint="@color/black"
            app:tv_text="@string/fragment_password_title" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarView">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <app.anysa.ui.widget.SettingsEditText
                    android:id="@+id/set_current_password"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginEnd="@dimen/dp20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:set_hint="@string/fragment_change_password_hint_enter_current_pass"
                    app:set_isPassword="true"
                    app:set_title="@string/fragment_change_password_label_your_current_pass" />

                <app.anysa.ui.widget.SettingsEditText
                    android:id="@+id/set_new_password"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/set_current_password"
                    app:set_hint="@string/fragment_change_password_hint_new_password"
                    app:set_isPassword="true"
                    app:set_title="@string/fragment_change_password_label_new_pass" />

                <app.anysa.ui.widget.SettingsEditText
                    android:id="@+id/set_new_password_confirm"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/set_new_password"
                    app:set_hint="@string/fragment_change_password_hint_new_password_again"
                    app:set_isPassword="true"
                    app:set_title="@string/fragment_change_password_label_confirm_new_pass" />

                <app.anysa.ui.widget.GradientedButton
                    android:id="@+id/btn_save"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp32"
                    app:gb_text="@string/fragment_edit_profile_btn_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/set_new_password_confirm"
                    app:layout_constraintWidth_percent="0.4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>