<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <app.anysa.ui.widget.RegisterFormInputView
        android:id="@+id/rfiv_phone"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp58"
        android:layout_marginEnd="@dimen/dp58"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rfiv_hint="+86 000 000 0000"
        app:rfiv_title="@string/register_fragment_label_phone_number"
        app:rfiv_type="text" />

    <app.anysa.ui.widget.RegisterFormInputView
        android:id="@+id/rfiv_password"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp58"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp58"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rfiv_phone"
        app:rfiv_hint="@string/register_fragment_hint_enter_password"
        app:rfiv_title="@string/register_fragment_label_password"
        app:rfiv_type="password" />

    <app.anysa.ui.widget.expandable_layout.ExpandableLayout
        android:id="@+id/el_advanced_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:el_expanded="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rfiv_password">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <app.anysa.ui.widget.RegisterFormInputView
                android:id="@+id/rfiv_full_name"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp58"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp58"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rfiv_hint="@string/register_fragment_hint_enter_full_name"
                app:rfiv_isOptional="true"
                app:rfiv_title="@string/register_fragment_label_full_name"
                app:rfiv_type="text" />

            <app.anysa.ui.widget.RegisterFormInputView
                android:id="@+id/rfiv_email"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp58"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp58"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rfiv_full_name"
                app:rfiv_hint="@string/register_fragment_hint_enter_email"
                app:rfiv_isOptional="true"
                app:rfiv_title="@string/register_fragment_label_email"
                app:rfiv_type="text" />

            <app.anysa.ui.widget.RegisterFormInputView
                android:id="@+id/rfiv_bio"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp58"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp58"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rfiv_email"
                app:rfiv_hint="@string/register_fragment_hint_enter_about_yourself"
                app:rfiv_isOptional="true"
                app:rfiv_maxLines="2"
                app:rfiv_title="@string/register_fragment_label_about_yourself"
                app:rfiv_type="text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </app.anysa.ui.widget.expandable_layout.ExpandableLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_advanced_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/register_fragment_btn_show_advanced_data"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/el_advanced_data" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp1"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="@id/tv_advanced_data"
        app:layout_constraintStart_toStartOf="@id/tv_advanced_data"
        app:layout_constraintTop_toBottomOf="@id/tv_advanced_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/AppTheme.GradientedLoginButton"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp86"
        android:layout_marginTop="@dimen/dp18"
        android:layout_marginEnd="@dimen/dp86"
        android:text="@string/register_fragment_button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_advanced_data" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp8"
        android:text="@string/register_fragment_label_have_an_account"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/sp14"
        app:fontFamily="@font/helvetica_neue_medium"
        app:layout_constraintBottom_toTopOf="@id/view_language_select"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintVertical_bias="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:text="@string/register_fragment_btn_sign_in"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/sp16"
        app:fontFamily="@font/helvetica_neue_medium"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_have_account" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp1"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_in"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

    <app.anysa.ui.widget.LanguageSelectionView
        android:id="@+id/view_language_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp18"
        app:fontFamily="@font/helvetica_neue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>