<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data />

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_start"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp0"
                android:scaleType="centerCrop"
                android:src="@drawable/imgstart"
                app:layout_constraintDimensionRatio="366:263"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp40"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_start" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_anysa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:text="Anysa"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                style="@style/AppTheme.GradientedLoginButton"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp86"
                android:layout_marginTop="@dimen/dp18"
                android:layout_marginEnd="@dimen/dp86"
                android:text="@string/start_fragment_button_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_anysa" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/AppTheme.SignUpButton"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp86"
                android:layout_marginTop="@dimen/dp18"
                android:layout_marginEnd="@dimen/dp86"
                android:text="@string/start_fragment_button_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_privacy_policy"
                style="AppTheme.PrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:text="@string/start_fragment_privacy_policy"
                android:textColor="@color/textColor"
                app:fontFamily="@font/helvetica_neue_medium"
                app:layout_constraintBottom_toTopOf="@id/view_language_select"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
                app:layout_constraintVertical_bias="1" />

            <app.anysa.ui.widget.LanguageSelectionView
                android:id="@+id/view_language_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp18"
                app:fontFamily="@font/helvetica_neue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>